--- a/06.DIGITAL ART(0818)/templates/about.html
+++ b/06.DIGITAL ART(0818)/templates/about.html
@@ -17,15 +17,15 @@
       font-family: 'NanumGothic';
       background-color: #292929;
     }
-    
+
     nav {
       font-size : 15px;
     }
-    
+
     nav:hover {
       font-weight : bold;
     }
-    
+
   </style>
 
 </head>
@@ -52,7 +52,7 @@
               <p class="masthead-subheading-white font-weight-light mb-3">저희를 소개합니다.</p>
           </div>
       </header>
-      
+
       <!--사업 소개 Section-->
       <section class="page-section bg-primary text-white mb-0" id="about" style="background-color:white;">
           <div class="container text-center">
@@ -62,8 +62,8 @@
               </div>
           </div>
       </section>
-      
-      
+
+
       <!-- 팀원 소개 Section-->
       <section class="page-section portfolio" id="portfolio">
           <div class="container">
@@ -178,8 +178,8 @@
       <footer class="footer text-center">
           <div class="container">
               <div class="row">
+
                   <!-- Footer-->
-                
                   <div class="container d-flex align-items-center flex-column">
                       <h4 class="masthead-subheading mb-0">끝판왕 TEAM</h4> <br>
                       <p class="masthead-subheading font-weight-light mb-0">
@@ -256,7 +256,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="{{ url_for ('static', filename='img/jwkim.png') }}" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5" style="font-size:20px;">지원에 대한 설명명명명</p>
+                                  <p class="mb-5" style="font-size:20px;">" 안녕하세요 저는 김지원입니다. A.K.A 예지, 디오니소스, 최강희 "</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       돌아가기
@@ -290,7 +290,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="{{ url_for ('static', filename='img/jhan.png') }}" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5" style="font-size:20px;">제현오빠에 대한 설명명명명</p>
+                                  <p class="mb-5" style="font-size:20px;">" 아가리(I GOT IT)~ "</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       돌아가기
@@ -324,7 +324,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="{{ url_for ('static', filename='img/twkim.png') }}" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5" style="font-size:20px;">태원이에 대한 설명명명명</p>
+                                  <p class="mb-5" style="font-size:20px;">"Music Is My Life, A.K.A 뮤말라~"</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       돌아가기
@@ -358,7 +358,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="{{ url_for ('static', filename='img/mjkim.png') }}" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5" style="font-size:20px;">명진이에 대한 설명명명</p>
+                                  <p class="mb-5" style="font-size:20px;"> "공기역학적으로 꿀벌은 날 수 없어야 한다. 하지만, 꿀벌은 그 사실을 모르기에 어쨌든 계속 잘 날아간다" </p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       돌아가기
@@ -413,7 +413,7 @@
       <script src="static/mail/jqBootstrapValidation.js"></script>
       <script src="static/mail/contact_me.js"></script>
       <!-- Core theme JS-->
-      <script src="static/js/scripts.js"></script>  
+      <script src="static/js/scripts.js"></script>
 
 </body>
 </html>
