--- a/06.DIGITAL ART(0818)/templates/home.html
+++ b/06.DIGITAL ART(0818)/templates/home.html
@@ -133,7 +133,7 @@
 								<h3 class="font16">Style Transfer</h3>
 								<p>styletransfer에 대한 설명명명</p>
 								<a href="/style" class="btn-pro">자세히보기</a>
-                <a href="/style_video" class="btn-pro">내 이미지 적용(유료)</a>
+                <a href="/style" class="btn-pro">내 이미지 적용(유료)</a>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6">
