--- a/06.DIGITAL ART(0818)/templates/style.html
+++ b/06.DIGITAL ART(0818)/templates/style.html
@@ -14,7 +14,7 @@
       font-family: 'NanumGothic';
       background-color: #292929;
     }
-  
+
     .drag-over { background-color: #ff0; }
     .thumb { width:200px; padding:5px; float:left; }
     .thumb > img { width:100%; }
@@ -37,20 +37,13 @@
       </ul>
     </div>
   </nav>
-  
+
   <!-- Header -->
-  <div class="jumbotron text-center">
-    <background-img src="{{ url_for ('static', filename='img/Header2.png') }}" alt="Image">
-  <h1>Style Transfer</h1> 
-  <p>이미지에 다양한 스타일을 적용해보세요.</p> 
-  <form>
-    <div class="input-group">
-      <input type="email" class="form-control" size="50" placeholder="이메일을 적어주세요" required>
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">문의하기</button>
-      </div>
-    </div>
-  </form>
+  <div class="card card-image" >
+<div class="jumbotron text-center" style="background-image: url(static/img/Header5.jpg)">
+  <background-img src="{{ url_for ('static', filename='img/Header5.jpg') }}" alt="Image">
+  <h1>Style Transfer</h1>
+  <p>이미지에 다양한 스타일을 적용해보세요.</p>
 </div>
 
 <div id="style_container" class="container-fluid text-center bg-grey">
@@ -68,32 +61,32 @@
           <script>
             var uploadFiles = [];
             var $drop = $("#drop");
-            
+
             // 이미지를 드래그 하기
-            $drop.on("dragenter", function(e) { 
+            $drop.on("dragenter", function(e) {
               $(this).addClass('drag-over');
-            }).on("dragleave", function(e) { 
+            }).on("dragleave", function(e) {
               //드래그 된 이미지를 제거
               $(this).removeClass('drag-over');
             }).on("dragover", function(e) {
               e.stopPropagation();
               e.preventDefault();
-            }).on('drop', function(e) { 
+            }).on('drop', function(e) {
                 //드래그된 이미지 넣기
                 e.preventDefault();
                 $(this).removeClass('drag-over');
-              
-                //이미지 파일  
-                var files = e.originalEvent.dataTransfer.files; 
+
+                //이미지 파일
+                var files = e.originalEvent.dataTransfer.files;
                 for(var i = 0; i < files.length; i++) {
                   var file = files[i];
                   //업로드 추가
-                  var size = uploadFiles.push(file); 
+                  var size = uploadFiles.push(file);
                   //미리보기
-                  preview(file, size - 1); 
+                  preview(file, size - 1);
                 }
             });
-            
+
             function preview(file, idx) {
               var reader = new FileReader();
               reader.onload = (function(f, idx) {
@@ -107,7 +100,7 @@
               })(file, idx);
               reader.readAsDataURL(file);
             }
-            
+
             $("#btnSubmit").on("click", function() {
               var formData = new FormData();
               $.each(uploadFiles, function(i, file) {
@@ -125,13 +118,13 @@
                 }
               });
             });
-            
+
             $("#thumbnails").on("click", ".close", function(e) {
               var $target = $(e.target);
               var idx = $target.attr('data-idx');
-              uploadFiles[idx].upload = 'disable'; //플래그 생성(삭제된 항목은 업로드하지 않기) 
+              uploadFiles[idx].upload = 'disable'; //플래그 생성(삭제된 항목은 업로드하지 않기)
               //미리보기 제거
-              $target.parent().remove(); 
+              $target.parent().remove();
             });
           </script>
         <p><strong>Input Image</strong></p>
@@ -139,11 +132,58 @@
       </div>
     </div>
     <div class="col-sm-4">
+
       <div class="thumbnail">
-        <img src={{ url_for ('static', filename='img/style_main.jpeg')}} alt="Style" width="400" height="300">
-        <p><strong>Choose Style</strong></p>
-        <p>스타일 선택하기</p>
+
+        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="3" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="4" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="5" class=""></li>
+            <li data-target="#myCarousel" data-slide-to="6" class=""></li>
+          </ol>
+
+
+          <form class="" action="index.html" method="post">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <input type="image" name="button" id="Monet" value="Monet" src="static/img/style_Monet.PNG">
+            </div>
+            <div class="item ">
+              <input type="image" name="button"  id="Cezanne" value="Cezanne" src="static/img/style_Cezanne.PNG">
+            </div>
+            <div class="item  ">
+              <input type="image" name="button" id="Gauguin" value="Gauguin" src="static/img/style_Gauguin.PNG">
+            </div>
+            <div class="item ">
+              <input type="image" name="button" id="Kandinsky" value="Kandinsky" src="static/img/style_Kandinsky.PNG">
+            </div>
+            <div class="item ">
+              <input type="image" name="button" id="Picasso" value="Picasso" src="static/img/style_Picasso.PNG">
+            </div>
+            <div class="item ">
+              <input type="image" name="button" id="van Gogh" value="van Gogh" src="static/img/style_van Gogh.PNG">
+            </div>
+            <p><strong>Choose Style</strong></p>
+            <button type="button" name="button" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+          </div>
+        </form>
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
+
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
@@ -153,7 +193,7 @@
       </div>
     </div>
   </div><br>
-  
+
   <h2>footer 적기</h2>
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
@@ -188,6 +228,6 @@
   </div>
 </div>
 
-  
+
 </body>
 </html>
