모델 이름 수정

--- a/06.DIGITAL ART(0818)/templates/style.html
+++ b/06.DIGITAL ART(0818)/templates/style.html
@@ -151,22 +151,22 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <input type="image" name="button" id="Monet" value="Monet" src="static/img/style_Monet.PNG">
+              <input type="image" name="button" id="monet" value="Monet" src="static/img/style_Monet.PNG">
             </div>
             <div class="item ">
-              <input type="image" name="button"  id="Cezanne" value="Cezanne" src="static/img/style_Cezanne.PNG">
+              <input type="image" name="button"  id="cezanne" value="Cezanne" src="static/img/style_Cezanne.PNG">
             </div>
             <div class="item  ">
-              <input type="image" name="button" id="Gauguin" value="Gauguin" src="static/img/style_Gauguin.PNG">
+              <input type="image" name="button" id="gauguin" value="Gauguin" src="static/img/style_Gauguin.PNG">
             </div>
             <div class="item ">
-              <input type="image" name="button" id="Kandinsky" value="Kandinsky" src="static/img/style_Kandinsky.PNG">
+              <input type="image" name="button" id="kandinsky" value="Kandinsky" src="static/img/style_Kandinsky.PNG">
             </div>
             <div class="item ">
-              <input type="image" name="button" id="Picasso" value="Picasso" src="static/img/style_Picasso.PNG">
+              <input type="image" name="button" id="picasso" value="Picasso" src="static/img/style_Picasso.PNG">
             </div>
             <div class="item ">
-              <input type="image" name="button" id="van Gogh" value="van Gogh" src="static/img/style_van Gogh.PNG">
+              <input type="image" name="button" id="van-gogh" value="van Gogh" src="static/img/style_van Gogh.PNG">
             </div>
             <p><strong>Choose Style</strong></p>
             <button type="button" name="button" >  <p> <strong> 스타일 선택하기 </strong></p></button>
@@ -194,37 +194,7 @@
     </div>
   </div><br>
 
-  <h2>footer 적기</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-      <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item">
-        <h4>할말말말마람ㄹ<br><span>할말말말마람ㄹ</span></h4>
-      </div>
-      <div class="item active">
-        <h4>할말말말마람ㄹ<br><span>할말말말마람ㄹ</span></h4>
-      </div>
-      <div class="item">
-        <h4>할말말말마람ㄹ<br><span>할말말말마람ㄹ</span></h4>
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+  
   </div>
 </div>
 
