모델명 수정
모델명 수정

--- a/07.DIGITAL ART(0818)/templates/style.html
+++ b/07.DIGITAL ART(0818)/templates/style.html
@@ -172,27 +172,27 @@
             <div class="item" id="style_">
               <p ><img src="static/img/style_Cezanne.PNG" alt="Cenzanne style"> </p>
               <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('Cezanne')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <button type="button" name="button" onclick="styleSend('cezanne')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
             </div>
           <div class="item" id="style_">
               <p ><img src="static/img/style_Gauguin.PNG" alt="Gauguin style"> </p>
               <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('Gauguin')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <button type="button" name="button" onclick="styleSend('gauguin')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
             </div>
           <div class="item" id="style_">
               <p ><img src="static/img/style_Kandinsky.PNG" alt="Kandinsky style"> </p>
               <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('Kandinsky')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <button type="button" name="button" onclick="styleSend('kandinsky')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
             </div>
           <div class="item" id="style_">
               <p ><img src="static/img/style_Picasso.PNG" alt="Picasso style"> </p>
               <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('Picasso')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <button type="button" name="button" onclick="styleSend('picasso')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
             </div>
           <div class="item" id="style_">
               <p ><img src="static/img/style_van Gogh.PNG" alt="van Gogh style"> </p>
               <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('van Gogh')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <button type="button" name="button" onclick="styleSend('van-gogh')" >  <p> <strong> 스타일 선택하기 </strong></p></button>
             </div>
           </div>
 
