--- a/08.DIGITAL ART(0820)/templates/faceswap_video.html
+++ b/08.DIGITAL ART(0820)/templates/faceswap_video.html
@@ -46,6 +46,14 @@
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
+
+nav {
+  font-size : 15px;
+}
+
+nav:hover {
+  font-weight : bold;
+}
   </style>
 
 </head>
@@ -53,10 +61,10 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#" style="color:black;">끝판왕 TEAM</a>
+        <a class="navbar-brand" href="/" style="color:black;">끝판왕 TEAM</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <!-- <li class="active"><a href="/">Home</a></li> -->
         <li><a href="/style">Style Transfer</a></li>
         <li><a href="/first">First Order Motion</a></li>
         <li><a href="/faceswap">Face Swap</a></li>
