--- a/08.DIGITAL ART(0820)/templates/home.html
+++ b/08.DIGITAL ART(0820)/templates/home.html
@@ -72,6 +72,14 @@
       color : black;
       font-family : NanumGothic;
       }
+      
+      nav {
+        font-size : 15px;
+      }
+  
+      nav:hover {
+        font-weight : bold;
+      }
   </style>
 </head>
 <body>
@@ -82,7 +90,7 @@
         <a class="navbar-brand" href="/" style="color:black;">끝판왕 TEAM</a>
       </div>
       <ul class="nav navbar-nav">
-        <!-- <li><a href="/">Home</a></li> -->
+        <!-- <li class="active"><a href="/">Home</a></li> -->
         <li><a href="/style">Style Transfer</a></li>
         <li><a href="/first">First Order Motion</a></li>
         <li><a href="/faceswap">Face Swap</a></li>
