--- a/08.DIGITAL ART(0820)/templates/style_video.html
+++ b/08.DIGITAL ART(0820)/templates/style_video.html
@@ -51,6 +51,14 @@
     body {
         font-family: 'NanumGothic';
       }
+      
+      nav {
+        font-size : 15px;
+      }
+  
+      nav:hover {
+        font-weight : bold;
+      }
 
       .drag-over { background-color: #ff0; }
       .thumb { width:200px; padding:5px; float:left; }
