--- a/08.DIGITAL ART(0820)/templates/style.html
+++ b/08.DIGITAL ART(0820)/templates/style.html
@@ -19,6 +19,19 @@
     .thumb { width:200px; padding:5px; float:left; }
     .thumb > img { width:100%; }
     .thumb > .close { position:absolute; background-color:red; cursor:pointer; }
+    .jumbotron {
+      background-image :url("static/img/Header5.png");
+      background-size : cover;
+    }
+    
+    nav {
+      font-size : 15px;
+    }
+
+    nav:hover {
+      font-weight : bold;
+    }
+
   </style>
 
 </head>
@@ -39,23 +52,21 @@
   </nav>
 
   <!-- Header -->
-  <div class="card card-image" >
-<div class="jumbotron text-center" style="background-image: url(static/img/Header5.jpg)">
+
+<div class="jumbotron text-center">
   <background-img src="{{ url_for ('static', filename='img/Header5.jpg') }}" alt="Image">
   <h1>Style Transfer</h1>
   <p>이미지에 다양한 스타일을 적용해보세요.</p>
 </div>
 
+<div class="container">
 <div id="style_container" class="container-fluid text-center bg-grey">
-  <h2>Style Transfer</h2><br>
-  <h4>이미지를 다양한 스타일로 변경해보세요</h4>
-  <div class="row text-center slideanim slide">
+  <h3 style="color: white";>이미지를 직접 Transfer 해보세요</h3>
+  <div class="row text-center">
     <div class="col-sm-4">
-      <div class="thumbnail">
-          <div id="drop" style="border:1px solid black; width:400; height:600; background-color:gray">
-            스타일을 입힐 이미지를 넣으세요<br> 
-          
-          
+      <div class="thumbnail" style="height:500px;">
+          <div id="drop" style="border:1px solid black; width:400; height:400px; background-color:gray">
+            <h4 style="color:white">스타일을 입힐 이미지를 넣으세요</h4> 
             <div id="thumbnails">
             </div>
           </div>
@@ -95,9 +106,9 @@
                 var reader = new FileReader();
                 reader.onload = (function(f, idx) {
                   return function(e) {
-                    var div = '<div class="thumb"> \
+                    var div = '<div> \
                     <div class="close" data-idx="' + idx + '">X</div> \
-                    <img src="' + e.target.result + '" title="' + escape(f.name) + '"/> \
+                    <img src="' + e.target.result + '" title="' + escape(f.name) + '" width="100%"; height="320px";/> \
                     </div>';
                     $("#thumbnails").append(div);
                   };
@@ -162,51 +173,51 @@
 
     <div class="col-sm-4">
 
-      <div class="thumbnail">
+      <div class="thumbnail" style="height:500px;" >
 
-        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel" style="height:400px;">
           <!-- Indicators -->
-          <ol class="carousel-indicators">
+          <!-- <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1" class=""></li>
             <li data-target="#myCarousel" data-slide-to="3" class=""></li>
             <li data-target="#myCarousel" data-slide-to="4" class=""></li>
             <li data-target="#myCarousel" data-slide-to="5" class=""></li>
             <li data-target="#myCarousel" data-slide-to="6" class=""></li>
-          </ol>
+          </ol> -->
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
 
             <div class="item active" id="style_">
-              <p ><img src="static/img/style_Monet.PNG" alt="Monet style"> </p>
-              <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('monet');changeImg()" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <p ><img src="static/img/style_Monet.PNG" alt="Monet style" style="height:400px;"> </p>
+              <p><strong>Monet style</strong></p>
+              <button type="button" name="button" onclick="styleSend('monet');changeImg()" > 스타일 선택하기 </button>
             </div>
             <div class="item" id="style_">
-              <p ><img src="static/img/style_Cezanne.PNG" alt="Cenzanne style"> </p>
-              <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('cezanne');changeImg()" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <p ><img src="static/img/style_Cezanne.PNG" alt="Cenzanne style" style="height:400px;"> </p>
+              <p><strong>Cenzanne style</strong></p>
+              <button type="button" name="button" onclick="styleSend('cezanne');changeImg()" >스타일 선택하기 </button>
             </div>
           <div class="item" id="style_">
-              <p ><img src="static/img/style_Gauguin.PNG" alt="Gauguin style"> </p>
-              <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('gauguin');changeImg()" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <p ><img src="static/img/style_Gauguin.PNG" alt="Gauguin style" style="height:400px;"> </p>
+              <p><strong>Gauguin style</strong></p>
+              <button type="button" name="button" name="button" onclick="styleSend('gauguin');changeImg()" > 스타일 선택하기 </button>
             </div>
           <div class="item" id="style_">
-              <p ><img src="static/img/style_Kandinsky.PNG" alt="Kandinsky style"> </p>
-              <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('kandinsky');changeImg()" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <p ><img src="static/img/style_Kandinsky.PNG" alt="Kandinsky style" style="height:400px;"> </p>
+              <p><strong>Kandinsky style</strong></p>
+              <button type="button" name="button" onclick="styleSend('kandinsky');changeImg()" >  스타일 선택하기 </button>
             </div>
           <div class="item" id="style_">
-              <p ><img src="static/img/style_Picasso.PNG" alt="Picasso style"> </p>
-              <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('picasso');changeImg()" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <p ><img src="static/img/style_Picasso.PNG" alt="Picasso style" style="height:400px;"> </p>
+              <p><strong>Picasso style</strong></p>
+              <button type="button" name="button" onclick="styleSend('picasso');changeImg()" >  스타일 선택하기 </button>
             </div>
           <div class="item" id="style_">
-              <p ><img src="static/img/style_van Gogh.PNG" alt="van Gogh style"> </p>
-              <p><strong>Choose Style</strong></p>
-              <button type="button" name="button" onclick="styleSend('van-gogh');changeImg()" >  <p> <strong> 스타일 선택하기 </strong></p></button>
+              <p ><img src="static/img/style_van Gogh.PNG" alt="van Gogh style" style="height:400px;"> </p>
+              <p><strong>van Gogh style</strong></p>
+              <button type="button" name="button" onclick="styleSend('van-gogh');changeImg()" >  스타일 선택하기 </button>
             </div>
           </div>
 
@@ -224,48 +235,14 @@
 
     </div>
     <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src={{ url_for ('static', filename='img/style_main.jpeg')}} id="OutputImg" alt="Output" width="400" height="300">
+      <div class="thumbnail" style="height:500px;">
+        <img src={{ url_for ('static', filename='img/style_main.jpeg')}} id="OutputImg" alt="Output" width="400" style="height:400px">
         <p><strong>Output Image</strong></p>
         <p>결과 이미지</p>
       </div>
     </div>
-  </div><br>
-
-  <h2>footer 적기</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-      <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item">
-        <h4>할말말말마람ㄹ<br><span>할말말말마람ㄹ</span></h4>
-      </div>
-      <div class="item active">
-        <h4>할말말말마람ㄹ<br><span>할말말말마람ㄹ</span></h4>
-      </div>
-      <div class="item">
-        <h4>할말말말마람ㄹ<br><span>할말말말마람ㄹ</span></h4>
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 </div>
-
-
+</div>
 </body>
 </html>
