--- a/09.DIGITAL ART(0822)/templates/home.html
+++ b/09.DIGITAL ART(0822)/templates/home.html
@@ -72,11 +72,11 @@
       color : black;
       font-family : NanumGothic;
       }
-      
+
       nav {
         font-size : 15px;
       }
-  
+
       nav:hover {
         font-weight : bold;
       }
@@ -159,7 +159,7 @@
 								<h3 class="font16">Faceswap</h3>
 								<p>faceswap에 대한 설명명명</p>
 								<a href="/faceswap" class="btn-pro">자세히보기</a>
-                <a href="/faceswap" class="btn-pro">내 이미지 적용(유료)</a>
+                <a href="/faceswap_video" class="btn-pro">내 이미지 적용(유료)</a>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6">
