--- a/09.DIGITAL ART(0822)/templates/faceswap.html
+++ b/09.DIGITAL ART(0822)/templates/faceswap.html
@@ -51,22 +51,22 @@
   <div class="row text-center slideanim slide">
     <div class="col-sm-4">
       <div class="swap1">
-        <h3 style="color:rgb(180,180,180)">First,</h3>
-        <h4 style="color:rgb(180,180,180)">바꾸고 싶은 얼굴을 넣고</h4><br />
+        <!-- <h3 style="color:rgb(180,180,180)">First,</h3>
+        <h4 style="color:rgb(180,180,180)">바꾸고 싶은 얼굴을 넣고</h4><br /> -->
         <img src="static/img/source.png" alt="Source" width="380px" height=100%>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="swap1">
-        <h3 style="color:rgb(180,180,180)">Second,</h3>
-        <h4 style="color:rgb(180,180,180)">내 얼굴을 넣으면</h4><br />
+        <!-- <h3 style="color:rgb(180,180,180)">Second,</h3>
+        <h4 style="color:rgb(180,180,180)">내 얼굴을 넣으면</h4><br /> -->
         <img src="static/img/target.png" alt="Target" width="380px" height=100%>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="swap1">
-        <h3 style="color:rgb(180,180,180)">Third,</h3>
-        <h4 style="color:rgb(180,180,180)">얼굴을 바꿔드립니다!</h4><br />
+        <!-- <h3 style="color:rgb(180,180,180)">Third,</h3>
+        <h4 style="color:rgb(180,180,180)">얼굴을 바꿔드립니다!</h4><br /> -->
         <img src="static/img/output.png" alt="Output" width="380px" height=100%>
       </div>
     </div>
