--- a/09.DIGITAL ART(0822)/templates/faceswap_video.html
+++ b/09.DIGITAL ART(0822)/templates/faceswap_video.html
@@ -114,11 +114,10 @@ nav:hover {
       <video src="static/video/output.mp4" controls width="490px" height="290px"></video>
         <br /><br />
         <h4 style="color:rgb(180,180,180)">바뀐 얼굴을 확인하세요.</h4>
+        <div class="filebox">
+          <label for="ex_file">변환하기</label>
+        </div>
 
-        <!-- <div class="filebox">
-          <label for="ex_file">다운로드</label>
-          <input type="file" id="ex_file" />
-        </div> -->
     </div>
   </div>
 </div>
